Update voting service
